# nonebot-adapter-wxmp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
example/: .dockerignore  .gitignore  Dockerfile  Dockerfile.3.10  Dockerfile.3.12  Dockerfile.3.9  bot.py  requirements.txt
example/plugins/: 公众号测试.py  公众号菜单.py  小程序测试.py
nonebot/adapters/: wxmp
nonebot/adapters/wxmp/: __init__.py  adapter.py  bot.py  bot.pyi  config.py  event.py  exception.py  file.py  message.py  secret.py  store.py
nonebot/adapters/wxmp/event/: __init__.py  all.py  base.py  miniprogram.py  offical.py
test/: event.json
tests/: test_dispatch_event.py
